Add SQLite support and add DataContexts

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=sqlitePerson.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
